# aegisvault

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sync.sh
.github/workflows/: ci.yml  release.yml
aegisvault/: __init__.py  __main__.py  config.py
aegisvault/api/: __init__.py  protocol.py  schemas.py  server.py
aegisvault/connections/: __init__.py  manager.py  models.py
aegisvault/execution/: __init__.py  inbox_watcher.py  vault.py
aegisvault/extensions/: __init__.py  registry.py
aegisvault/model/: __init__.py  classifier.py  embedding.py  provider.py
aegisvault/orchestration/: __init__.py  agent.py  pipeline.py  state_machine.py  task_store.py
aegisvault/platform/: __init__.py  manager.py  models.py  notifications.py  secure_storage.py
aegisvault/presentation/: __init__.py  connection_dialog.py  first_run_wizard.py  settings_dialog.py  tray.py  vault_browser.py
aegisvault/security/: __init__.py  audit_log.py  crypto.py  firewall.py  keytree.py  master_key.py  offline.py  password_store.py  policy.py  sandbox.py  win32_appcontainer.py  win_helpers.py  windows_hello.py
aegisvault/sync/: __init__.py  auth.py  conflict.py  discovery.py  engine.py  protocol.py
docs/: MOBILE_ARCHITECTURE.md  PROJECT_PLAN.md  SECURITY.md  TAURI_EVALUATION.md  USER_GUIDE.md
docs/decisions/: ADR-001.md  ADR-002.md
tests/: __init__.py  presentation_stubs.py  test_agent.py  test_api_server.py  test_audit_log.py  test_classifier_schema.py  test_config.py  test_connection_dialog.py  test_crypto.py  test_embedding.py  test_firewall.py  test_first_run_wizard.py  test_inbox_watcher.py  test_keytree.py  test_main.py  test_manager_credential_encryption.py  test_master_key.py  test_master_key_rotation.py  test_models.py  test_notifications.py  test_offline.py  test_password_store.py  test_pipeline_e2e.py  test_platform_manager.py  test_policy.py  test_pre_classify.py  test_prompt_eval.py  test_protocol.py  test_provider.py  test_registry.py  test_sandbox.py  test_schemas.py  test_secure_storage.py  test_settings_dialog.py  test_state_machine.py  test_sync_auth.py  test_sync_conflict.py  test_sync_discovery.py  test_sync_engine.py  test_sync_protocol.py  (+7 more)
tests/fixtures/: prompt_eval_samples.jsonl
