[tool.poetry]
name = "aegisvault"
version = "0.1.0"
description = "Local private content management agent"
authors = ["AegisVault Team"]
readme = "README.md"
packages = [{ include = "aegisvault" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
pydantic-settings = "^2.3"
httpx = "^0.27"
watchdog = "^4.0"
cryptography = "^42.0"
argon2-cffi = "^23.1"
pyqt6 = "^6.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"

[tool.poetry.scripts]
aegisvault = "aegisvault.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gui: GUI-related tests requiring a display",
    "integration: Tests that hit real external services",
    "slow: Tests that take a long time to run",
    "security: Security-sensitive tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
    "ignore::pytest.PytestDeprecationWarning",
]
addopts = "-m 'not integration and not gui and not slow' --cov=aegisvault --cov-branch --cov-report=term-missing --cov-fail-under=60"
