[project]
name = "aegisvault"
version = "0.1.0"
description = "Local private content management agent"
authors = [{ name = "AegisVault Team" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["privacy", "encryption", "local", "vault", "ai", "content-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<0.28",
    "watchdog>=4.0,<5.0",
    "cryptography>=42.0,<43.0",
    "argon2-cffi>=23.1,<24.0",
]

[project.optional-dependencies]
gui = ["pyqt6>=6.7,<7.0"]
semantic = ["sentence-transformers>=3.0,<4.0"]

[project.scripts]
aegisvault = "aegisvault.__main__:main"

[project.urls]
Homepage = "https://github.com/aegisvault/aegisvault"
Repository = "https://github.com/aegisvault/aegisvault"
Issues = "https://github.com/aegisvault/aegisvault/issues"

[tool.poetry]
packages = [{ include = "aegisvault" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"

[tool.poetry.group.semantic.dependencies]
sentence-transformers = "^3.0"

[tool.poetry.group.gui.dependencies]
pyqt6 = "^6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "sentence_transformers"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gui: GUI-related tests requiring a display",
    "integration: Tests that hit real external services",
    "slow: Tests that take a long time to run",
    "security: Security-sensitive tests",
    "windows: Tests that exercise Windows-only APIs",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
    "ignore::pytest.PytestDeprecationWarning",
]
# --assert=plain works around a pytest assertion-rewriting incompatibility
# observed on Python 3.14 (the project itself targets Python 3.11+).
addopts = "-m 'not integration and not gui and not slow' --assert=plain --cov=aegisvault --cov-branch --cov-report=term-missing --cov-report=html --cov-fail-under=60"
